# metolabs-evolver

./: README.md
calculator-challenge/: Cargo.toml  Evolve.toml  README.md
calculator-challenge/src/: lib.rs
calculator-challenge/tests/: calculator_tests.rs
dashboard/: monitor.py  pyproject.toml  tui.py
examples/: python-project-evolve.toml
orchestrator/: .gitignore  Cargo.toml
orchestrator/src/: config.rs  main.rs
slow-fibo/: Cargo.toml  Evolve.toml  Justfile
slow-fibo/.config/: nextest.toml
slow-fibo/.github/workflows/: ci.yml
slow-fibo/src/: lib.rs  main.rs
slow-fibo/tests/: integration_test.rs
